syntax="proto3";

option java_multiple_files = true;

option java_package = "com.top10moviesservice.proto";

message Movie {
    string id = 1;
    string name = 2;
    string description = 3;
    double rating = 4; 
}

message Top10MoviesRequest {

}

message Top10MoviesResponse {
    repeated Movie movies = 1;
}

service TrendingMovies {
    rpc GetTop10Movies(Top10MoviesRequest) returns (Top10MoviesResponse);
}